objects/Contact.object
<CustomObject>
    <fields>
        <fullName>sf42_gl_NDT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sf42_gl_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>No longer with company</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Department__c</fullName>
        <label>JP Department JP</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_First_Name__c</fullName>
        <label>First Name Local</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Last_Name__c</fullName>
        <label>Last Name Local</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Sent_Information__c</fullName>
        <label>JP Sent Information</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Year card 2010</fullName>
                </value>
                <value>
                    <fullName>Christmas card 2010</fullName>
                </value>
                <value>
                    <fullName>Invitation letter JIMA 2010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_jp_Title_jp__c</fullName>
        <label>Title Local</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sf42_jp_Visited_Trade_Fair__c</fullName>
        <label>JP Visited us at Trade fair</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JIMA 2010</fullName>
                </value>
                <value>
                    <fullName>NOVAFLUX 2010</fullName>
                </value>
                <value>
                    <fullName>Welding show 2010</fullName>
                </value>
                <value>
                    <fullName>2014-Maintnaice show with T</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_sg_Trade_Shows__c</fullName>
        <label>SG Trade Shows</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>POWERGEN 2010</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Application__c</fullName>
        <label>US Application</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alignment - Condition Monitoring</fullName>
                </value>
                <value>
                    <fullName>Alignment - Laser</fullName>
                </value>
                <value>
                    <fullName>Alignment – Optical</fullName>
                </value>
                <value>
                    <fullName>Alignment – Other</fullName>
                </value>
                <value>
                    <fullName>Alignment – Shaft</fullName>
                </value>
                <value>
                    <fullName>Annealing</fullName>
                </value>
                <value>
                    <fullName>Blown Film</fullName>
                </value>
                <value>
                    <fullName>Calendering</fullName>
                </value>
                <value>
                    <fullName>Card Board</fullName>
                </value>
                <value>
                    <fullName>Cast Film</fullName>
                </value>
                <value>
                    <fullName>Coated Fabric</fullName>
                </value>
                <value>
                    <fullName>Coating</fullName>
                </value>
                <value>
                    <fullName>Coating / Laminating</fullName>
                </value>
                <value>
                    <fullName>Coating / Painting</fullName>
                </value>
                <value>
                    <fullName>Container</fullName>
                </value>
                <value>
                    <fullName>Container Board</fullName>
                </value>
                <value>
                    <fullName>Converting (please specify)</fullName>
                </value>
                <value>
                    <fullName>Corrugated</fullName>
                </value>
                <value>
                    <fullName>CTL - Cut To Length</fullName>
                </value>
                <value>
                    <fullName>Die Cutting</fullName>
                </value>
                <value>
                    <fullName>Embossing</fullName>
                </value>
                <value>
                    <fullName>Extrusion</fullName>
                </value>
                <value>
                    <fullName>Fabrication</fullName>
                </value>
                <value>
                    <fullName>Fabrics</fullName>
                </value>
                <value>
                    <fullName>Felt/Wire</fullName>
                </value>
                <value>
                    <fullName>Flexible Packaging</fullName>
                </value>
                <value>
                    <fullName>Flexofoldergluer</fullName>
                </value>
                <value>
                    <fullName>Flexography</fullName>
                </value>
                <value>
                    <fullName>Foil</fullName>
                </value>
                <value>
                    <fullName>Galvanizing – Electroplating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sf42_us_Industry__c</fullName>
        <label>US Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alignment Equipment</fullName>
                </value>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Association</fullName>
                </value>
                <value>
                    <fullName>Carpet</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Converting</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Film</fullName>
                </value>
                <value>
                    <fullName>Journalism</fullName>
                </value>
                <value>
                    <fullName>Metal - Other</fullName>
                </value>
                <value>
                    <fullName>Metal - Sheet</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Service Business</fullName>
                </value>
                <value>
                    <fullName>Steel</fullName>
                </value>
                <value>
                    <fullName>Textile</fullName>
                </value>
                <value>
                    <fullName>University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Canada_Billing_State_validation</fullName>
        <active>true</active>
        <description>Validate Canada state name. Must be AB, QC, NT, ON, PEI, NL, YU, BC,NU, NS, NB, MB or SK.</description>
        <errorConditionFormula>MailingCountry = &quot;Canada&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Canada&apos;) &amp;&amp; AND(
MailingState != &quot;AB&quot;,
MailingState != &quot;QC&quot;,
MailingState != &quot;NT&quot;, 
MailingState != &quot;ON&quot;, 
MailingState != &quot;PEI&quot;,
MailingState != &quot;NL&quot;,
MailingState != &quot;YU&quot;,
MailingState != &quot;BC&quot;,
MailingState != &quot;NU&quot;,
MailingState != &quot;NS&quot;,
MailingState != &quot;NB&quot;,
MailingState != &quot;MB&quot;,
MailingState != &quot;SK&quot;
)</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use: 
AB, QC, NT, ON, PEI, NL, YU, BC,NU, NS, NB, MB or SK</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_OptIn_and_Optout_check</fullName>
        <active>false</active>
        <description>If both fields &quot;Email Opt In&quot; and &quot;Email Opt out&quot; are selected throw error message. Deactivated because Vertical Response can&apos;t manage that error.
OPT Out win if that situation happen by the Field Update.</description>
        <errorConditionFormula>AND(ptt_Email_Opt_In__c = TRUE,  HasOptedOutOfEmail = TRUE)</errorConditionFormula>
        <errorDisplayField>ptt_Email_Opt_In__c</errorDisplayField>
        <errorMessage>You cannot select both &quot;Email Opt In&quot; and &quot;Email Opt out&quot;, please deselect one of that fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IT_Salutation_Mandatory</fullName>
        <active>true</active>
        <description>Salutation field is mandatory for Italy.</description>
        <errorConditionFormula>AND (ISPICKVAL($User.sf42_Business_Unit__c ,&quot;Italy&quot;), ISPICKVAL(Salutation, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Salutation</errorDisplayField>
        <errorMessage>Salutation is mandatory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Italy_Billing_State_validation</fullName>
        <active>true</active>
        <description>Validate Italy state name. Must be two letters for example AQ, CH, PE or TE for Abruzzo region.</description>
        <errorConditionFormula>MailingCountry  = &quot;Italy&quot; &amp;&amp; CONTAINS (Text($User.sf42_Business_Unit__c) , &apos;Italy&apos;)  &amp;&amp; AND(
MailingState != &quot;AQ&quot;, MailingState != &quot;CH&quot;, MailingState != &quot;PE&quot;, MailingState != &quot;TE&quot;,
MailingState != &quot;MT&quot;, MailingState != &quot;PZ&quot;,
MailingState != &quot;CZ&quot;, MailingState != &quot;CS&quot;, MailingState != &quot;KR&quot;, MailingState != &quot;RC&quot;, MailingState != &quot;VV&quot;,
MailingState != &quot;AV&quot;, MailingState != &quot;BN&quot;, MailingState != &quot;CE&quot;, MailingState != &quot;NA&quot;, MailingState != &quot;SA&quot;,
MailingState != &quot;BO&quot;, MailingState != &quot;FE&quot;, MailingState != &quot;FC&quot;, MailingState != &quot;MO&quot;, MailingState != &quot;PR&quot;, MailingState != &quot;PC&quot;, MailingState != &quot;RA&quot;, MailingState != &quot;RE&quot;, MailingState != &quot;RN&quot;,
MailingState != &quot;GO&quot;, MailingState != &quot;PN&quot;, MailingState != &quot;TS&quot;, MailingState != &quot;UD&quot;,
MailingState != &quot;FR&quot;, MailingState != &quot;LT&quot;, MailingState != &quot;RI&quot;, MailingState != &quot;RM&quot;, MailingState != &quot;VT&quot;,
MailingState != &quot;GE&quot;, MailingState != &quot;IM&quot;, MailingState != &quot;SP&quot;, MailingState != &quot;SV&quot;,
MailingState != &quot;BG&quot;, MailingState != &quot;BS&quot;, MailingState != &quot;CO&quot;, MailingState != &quot;CR&quot;, MailingState != &quot;LC&quot;, MailingState != &quot;LO&quot;, MailingState != &quot;MN&quot;, MailingState != &quot;MI&quot;, MailingState != &quot;MB&quot;, MailingState != &quot;PV&quot;, MailingState != &quot;SO&quot;, MailingState != &quot;VA&quot;,
MailingState != &quot;AN&quot;, MailingState != &quot;AP&quot;, MailingState != &quot;FM&quot;, MailingState != &quot;MC&quot;, MailingState != &quot;PU&quot;,
MailingState != &quot;CB&quot;, MailingState != &quot;IS&quot;,
MailingState != &quot;AL&quot;, MailingState != &quot;AT&quot;, MailingState != &quot;BI&quot;, MailingState != &quot;CN&quot;, MailingState != &quot;NO&quot;, MailingState != &quot;TO&quot;, MailingState != &quot;VB&quot;, MailingState != &quot;VC&quot;,
MailingState != &quot;BA&quot;, MailingState != &quot;BT&quot;, MailingState != &quot;BR&quot;, MailingState != &quot;FG&quot;, MailingState != &quot;LE&quot;, MailingState != &quot;TA&quot;,
MailingState != &quot;CA&quot;, MailingState != &quot;CI&quot;, MailingState != &quot;VS&quot;, MailingState != &quot;NU&quot;, MailingState != &quot;OG&quot;, MailingState != &quot;OT&quot;, MailingState != &quot;OR&quot;, MailingState != &quot;SS&quot;,
MailingState != &quot;AG&quot;, MailingState != &quot;CL&quot;, MailingState != &quot;CT&quot;, MailingState != &quot;EN&quot;, MailingState != &quot;ME&quot;, MailingState != &quot;PA&quot;, MailingState != &quot;RG&quot;, MailingState != &quot;SR&quot;, MailingState != &quot;TP&quot;,
MailingState != &quot;AR&quot;, MailingState != &quot;FI&quot;, MailingState != &quot;GR&quot;, MailingState != &quot;LI&quot;, MailingState != &quot;LU&quot;, MailingState != &quot;MS&quot;, MailingState != &quot;PI&quot;, MailingState != &quot;PT&quot;, MailingState != &quot;PO&quot;, MailingState != &quot;SI&quot;,
MailingState != &quot;BZ&quot;, MailingState != &quot;TN&quot;,
MailingState != &quot;PG&quot;, MailingState != &quot;TR&quot;,
MailingState != &quot;AO&quot;,
MailingState != &quot;BL&quot;, MailingState != &quot;PD&quot;, MailingState != &quot;RO&quot;, MailingState != &quot;TV&quot;, MailingState != &quot;VE&quot;, MailingState != &quot;VR&quot;, MailingState != &quot;VI&quot;
)</errorConditionFormula>
        <errorDisplayField>MailingState</errorDisplayField>
        <errorMessage>State name is not valid. Please use two-letter word.
For example AQ, CH, PE or TE for Abruzzo region.</errorMessage>
    </validationRules>
</CustomObject>